# market-coverage

./: app.json  app.py  dump.py  pyproject.toml  requirements.txt  result.csv  test.js  test.json
insights/: __init__.py  founder.py  funding.py  geography.py  industry.py  investors.py  summary.py  valuation.py
