[tool.poetry]
name = "market-coverage"
version = "0.1.0"
description = ""
authors = ["Shen Nan <wongshennan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
matplotlib = "^3.9.2"
plotly = "^5.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
